--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,10 +1,14 @@
 {
-  "processors": ["stylelint-processor-styled-components"],
+  "processors": [],
   "extends": [
-    "stylelint-config-recommended",
-    "stylelint-config-styled-components"
+    "stylelint-config-recommended"
   ],
   "rules": {
+    "at-rule-no-unknown": [ true, {
+      "ignoreAtRules": [
+        "tailwind"
+      ]
+    }],
     "at-rule-no-vendor-prefix": null,
     "color-named": null,
     "declaration-block-no-duplicate-properties": true,
