--- a/package.json
+++ b/package.json
@@ -6,61 +6,61 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc --pretty --noEmit",
-    "format": "prettier --write 'src/**/*.{ts,tsx}'",
-    "lint:js": "eslint 'src/**/*.{ts,tsx}' --config .eslintrc.js --ignore-path .eslintignore",
-    "lint:styled-components": "stylelint 'src/**/*_Styled.{ts,tsx}'",
+    "eslint": "./node_modules/.bin/eslint --cache --cache-location=node_modules/.cache/.eslintcache --fix",
+    "stylelint": "./node_modules/.bin/stylelint --cache --cache-location=node_modules/.cache/.stylelintcache --fix",
+    "lint:js": "yarn run eslint 'src/**/*.{ts,tsx}' --ignore-path .eslintignore",
+    "lint:css": "yarn run stylelint 'src/**/*.{css,scss}' --ignore-path .stylelintignore",
+    "typecheck": "./node_modules/.bin/tsc --noEmit --jsx 'react-jsxdev' --allowSyntheticDefaultImports",
     "telemetry-status": "npx next telemetry status",
     "telemetry-enable": "npx next telemetry enable",
-    "telemetry-disable": "npx next telemetry disable"
+    "telemetry-disable": "npx next telemetry disable",
+    "cypress:open": "cypress open"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "npm run type-check"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "*.@(ts|tsx|js)": [
-      "npm run lint:js",
-      "npm run lint:styled-components",
-      "npm run format"
-    ]
+    "*.{js,ts,tsx}": "yarn run lint:js",
+    "*.{css,scss}": "yarn run lint:css",
+    "*.{js,ts,tsx,css,md}": "prettier --write",
+    "*.{ts,tsx}": "yarn run typecheck"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
-    "next": "^10.0.8",
+    "@tailwindcss/jit": "^0.1.15",
+    "autoprefixer": "^10.2.5",
+    "dotenv": "^8.2.0",
+    "next": "^10.0.9",
     "next-pwa": "^5.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
-    "sass": "^1.32.2",
-    "styled-components": "^5.2.1"
+    "tailwindcss": "^2.0.4"
   },
   "devDependencies": {
-    "@types/node": "^14.14.14",
-    "@types/react": "^17.0.0",
-    "@types/react-redux": "^7.1.15",
-    "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.16.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "cross-env": "^7.0.3",
+    "cypress": "^6.8.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
+    "postcss": "^8.2.8",
     "prettier": "^2.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   }
 }
