--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 # development
 /public/**/*.map
 
+# tests
+/coverage
+
 # misc
 .DS_Store
 *.pem
@@ -27,11 +30,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# local env files - https://nextjs.org/docs/basic-features/environment-variables
+.env
+.env.development
+.env.production
+.env*.local
 
 # vercel
 .vercel
