--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "lint:js": "yarn run eslint 'src/**/*.{ts,tsx}' --ignore-path .eslintignore",
     "lint:css": "yarn run stylelint 'src/**/*.{css,scss}' --ignore-path .stylelintignore",
     "typecheck": "./node_modules/.bin/tsc --noEmit --jsx 'react-jsxdev' --allowSyntheticDefaultImports",
+    "test": "jest",
     "telemetry-status": "npx next telemetry status",
     "telemetry-enable": "npx next telemetry enable",
     "telemetry-disable": "npx next telemetry disable",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "husky": {
     "hooks": {
@@ -30,37 +33,56 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
     "@tailwindcss/jit": "^0.1.15",
-    "autoprefixer": "^10.2.5",
     "dotenv": "^8.2.0",
     "next": "^10.0.9",
     "next-pwa": "^5.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-redux": "^7.2.2",
-    "tailwindcss": "^2.0.4"
+    "react-redux": "^7.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
+    "@storybook/addon-a11y": "^6.2.1",
+    "@storybook/addon-actions": "^6.2.1",
+    "@storybook/addon-essentials": "^6.2.1",
+    "@storybook/addon-links": "^6.2.1",
+    "@storybook/react": "^6.2.1",
+    "@tailwindcss/postcss7-compat": "^2.0.4",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-redux": "^7.1.16",
+    "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "autoprefixer": "^9",
+    "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "cypress": "^6.8.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest-dom": "^3.7.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-testing-library": "^3.10.2",
     "husky": "^4.3.6",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
-    "postcss": "^8.2.8",
+    "postcss": "^7",
     "prettier": "^2.2.1",
+    "sass": "^1.32.8",
+    "sass-loader": "10.1.1",
     "stylelint": "^13.8.0",
     "stylelint-config-recommended": "^3.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "ts-jest": "^26.5.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
 }
