--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,8 +13,7 @@ jobs:
           persist-credentials: false
 
       - name: Install and Build
-      - uses: actions/checkout@v2
-      - uses: borales/actions-yarn@v2.3.0
+        uses: borales/actions-yarn@v2.3.0
         with:
           cmd: install # will run `yarn install` command
       - uses: borales/actions-yarn@v2.3.0
