--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,28 +7,24 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout 🛎️
         uses: actions/checkout@v2.3.4
         with:
           persist-credentials: false
 
-      - name: Install Packages with Yarn
-        uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: install # will run `yarn install` command
-      - name: Build and Export
-        uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: export # will run `yarn export` command
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'out' folder.
+        run: |
+          npm install
+          npm run build
         env:
           CI: true
           DEPLOY_TARGET: gh-pages
-      - run: touch docs/.nojekyll
+      - run: touch out/.nojekyll
 
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
           GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
           BRANCH: gh-pages  # The branch the action should deploy to.
-          FOLDER: docs       # The folder the action should deploy.
+          FOLDER: out       # The folder the action should deploy.
           CLEAN: true       # Automatically remove deleted files from the deploy branch
