--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
+    "export": "next export",
     "start": "next start",
     "eslint": "./node_modules/.bin/eslint --cache --cache-location=node_modules/.cache/.eslintcache --fix",
     "stylelint": "./node_modules/.bin/stylelint --cache --cache-location=node_modules/.cache/.stylelintcache --fix",
