--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -2,30 +2,65 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - gh-pages
+      - main
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.4
-        with:
-          persist-credentials: false
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'out' folder.
-        run: |
-          npm install
-          npm run build
-          npm run export
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+
+      # Cache node_modules for faster CI runs if the yarn.lock doesn't change change
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Restore yarn cache
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      # Throw an error if the yarn.lock file doesn't match the installed dependencies (rather than updating it in-place, which it does by default locally)
+      - name: Install
+        run: yarn install --frozen-lockfile --silent
+
+      - name: Copy example env
+        run: cp .env.example .env
+
+      - name: Lint (JS)
+        run: yarn lint:js
+
+      - name: Lint (CSS)
+        run: yarn lint:css
+
+      - name: Typecheck
+        run: yarn typecheck
+
+      - name: Tests (Jest)
+        run: yarn test
+      
+      - name: Build
         env:
           CI: true
           DEPLOY_TARGET: gh-pages
-      - run: touch out/.nojekyll
+        run: yarn build
+
+      - name: Add noJekyll
+        run: touch docs/.nojekyll
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
           GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
           BRANCH: gh-pages  # The branch the action should deploy to.
-          FOLDER: out       # The folder the action should deploy.
+          FOLDER: docs       # The folder the action should deploy.
           CLEAN: true       # Automatically remove deleted files from the deploy branch
