--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -52,12 +52,12 @@ jobs:
         run: yarn build
 
       - name: Add noJekyll
-        run: touch docs/.nojekyll
+        run: touch .nojekyll
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
           GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
           BRANCH: gh-pages  # The branch the action should deploy to.
-          FOLDER: docs       # The folder the action should deploy.
+          FOLDER: out       # The folder the action should deploy.
           CLEAN: true       # Automatically remove deleted files from the deploy branch
