--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -52,7 +52,7 @@ jobs:
         run: yarn build
 
       - name: Add noJekyll
-        run: touch .nojekyll
+        run: touch out/.nojekyll
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
