--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    ignore:
+      # Husky v5 is currently in early-access and not open source licensed (you'd have to pay for a commercial license)
+      - dependency-name: "husky"
+        versions: ["5.x"]
